--- a/src/main/resources/templates/documents/stand_details.html
+++ b/src/main/resources/templates/documents/stand_details.html
@@ -118,7 +118,7 @@
                           </strong>
                         </address>
                         <div class="row" style="padding-left: 10px;">
-                          <img  class="attachment-block clearfix" src="http://www.crifst.ac.cn/PDF/hangyebiaozhun/GYT2482011/files/thumb/1.jpg" style="height: 400px;">
+                          <img  class="attachment-block clearfix" src="http://www.crifst.ac.cn/PDF/hangyebiaozhun/GYT2482011/files/thumb/1.jpg" style="height: 70%; width: 60%;">
                         </div>
                       </div>
                       <div class="col-6">
@@ -128,7 +128,7 @@
                           </strong>
                         </address>
                         <!--                        <video style="height: 400px; width: 600px;" autoplay="autoplay" controls="controls" th:src="@{/video/abc.mov}">-->
-                        <iframe src="http://218.241.227.185/mserver/player/?url=%2Fvod%2Fvod%2Fiyq5a7xu%2Findex.m3u8" height="400px" width="600px" frameborder="0" scrolling="no" allowfullscreen></iframe>
+                        <iframe src="http://218.241.227.185/mserver/player/?url=%2Fvod%2Fvod%2Fiyq5a7xu%2Findex.m3u8" style="width: 60%; height: 80%;" frameborder="0" scrolling="no" allowfullscreen></iframe>
                         <!--                        </video>-->
                       </div>
                       <div class="col-3">
