add search function

--- a/src/main/resources/templates/analysis/statistic_analysis.html
+++ b/src/main/resources/templates/analysis/statistic_analysis.html
@@ -459,6 +459,10 @@
         }]
     }
     barChart.setOption(option);
+    window.addEventListener("resize", function () {
+
+        barChart.resize();
+    });
 </script>
 </body>
 </html>
