--- a/src/main/resources/templates/course/online_course.html
+++ b/src/main/resources/templates/course/online_course.html
@@ -128,9 +128,9 @@
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
                     <div style="padding-top:10px;">
 
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/投影灯盖板拆卸.jpg}" style="height:100%;width:100%;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/投影灯盖板拆卸.jpg}" style="height: 200px; width:100%;">
                     </div>
-                    <p style="padding-right: 10px;">DDP2K-20C投影灯盖板拆卸方法</p>
+                    <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C投影灯盖板拆卸方法</p>
                     <div class="form-group row">
                       <div class="col-11">
                         <p style="padding-left: 10px; padding-bottom: 30px;">
@@ -145,7 +145,7 @@
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
 
                     <div style=" padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/后盖板安装.jpg}" style="height:100%;width:100%;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/后盖板安装.jpg}" style="height:200px;width:100%;">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C后盖板安装方法</p>
                     <div class="form-group row">
@@ -162,7 +162,7 @@
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
 
                     <div style="padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/密封盖板安装.jpg}" style="height:100%;width:100%;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/密封盖板安装.jpg}" style="height:200px;width:100%;">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C密封盖板安装方法</p>
                     <div class="form-group row">
@@ -179,9 +179,9 @@
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
 
                     <div style="padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/左盖板安装.jpg}" style="height:100%;width:100%;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/左盖板安装.jpg}" style="height:200px;width:100%;">
                     </div>
-                    <p style="padding-right: 10px;">DP2K-20C左盖板安装方法</p>
+                    <p style="padding-right: 10px; padding-left: 10px;">DP2K-20C左盖板安装方法</p>
                     <div class="form-group row">
                       <div class="col-11">
                         <p style="padding-left: 10px; padding-bottom: 30px;">
@@ -196,11 +196,11 @@
               <div class="row form-group col-12">
                 <div class="col-3">
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
-                    <div style="padding-left:10px; padding-top:10px;">
+                    <div style="padding-top:10px;">
 
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/前盖板安装.jpg}" style="height:100%;width:100%;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/前盖板安装.jpg}" style="height:200px;width:100%;">
                     </div>
-                    <p style="padding-right: 10px;">DP2K-20C前盖板安装方法</p>
+                    <p style="padding-right: 10px; padding-left: 10px;">DP2K-20C前盖板安装方法</p>
                     <div class="form-group row">
                       <div class="col-11">
                         <p style="padding-left: 10px; padding-bottom: 30px;">
@@ -215,7 +215,7 @@
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
 
                     <div style="padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/输入盖板安装.jpg}" style="height:100%;width:100%;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/输入盖板安装.jpg}" style="height:200px;width:100%;">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C输入盖板拆卸方法</p>
                     <div class="form-group row">
@@ -231,7 +231,7 @@
                 <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
 
                   <div style="padding-top:10px;">
-                    <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/顶盖板安装.jpg}" style="height:100%;width:100%;">
+                    <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/顶盖板安装.jpg}" style="height:200px;width:100%;">
                   </div>
                   <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C顶盖板拆卸方法</p>
                   <div class="form-group row">
@@ -248,7 +248,7 @@
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
 
                     <div style="padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/镜头安装.jpg}" style="height:100%;width:100%;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/镜头安装.jpg}" style="height:200px;width:100%;">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C镜头安装方法</p>
                     <div class="form-group row">
@@ -265,7 +265,7 @@
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
 
                     <div style="padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/镜头拆卸.jpg}" style="height:100%;width:100%;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/镜头拆卸.jpg}" style="height:200px;width:100%;">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C镜头拆卸方法</p>
                     <div class="form-group row">
@@ -281,7 +281,7 @@
                 <div class="col-3">
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
                     <div style="padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/前盖板拆卸.jpg}" style="height:100%;width:100%;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/前盖板拆卸.jpg}" style="height:200px;width:100%;">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C前盖板拆卸方法</p>
                     <div class="form-group row">
@@ -298,7 +298,7 @@
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
 
                     <div style="padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/后盖板拆卸.jpg}" style="height:100%;width:100%;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/后盖板拆卸.jpg}" style="height:200px;width:100%;">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C后盖板拆卸方法</p>
                     <div class="form-group row">
@@ -315,7 +315,7 @@
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
 
                     <div style="padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/密封盖板拆卸.jpg}" style="height:100%;width:100%;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/密封盖板拆卸.jpg}" style="height:200px;width:100%;">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C密封盖板拆卸方法</p>
                     <div class="form-group row">
@@ -332,7 +332,7 @@
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
 
                     <div style="padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/左盖板拆卸.jpg}" style="height:100%;width:100%;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/左盖板拆卸.jpg}" style="height:200px;width:100%;">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C左盖板拆卸方法</p>
                     <div class="form-group row">
@@ -349,7 +349,7 @@
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
 
                     <div style="padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/投影灯盖板拆卸.jpg}" style="height:100%;width:100%;"
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/投影灯盖板拆卸.jpg}" style="height:200px;width:100%;"
                       >
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C投影灯盖板拆卸方法</p>
@@ -367,7 +367,7 @@
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
 
                     <div style="padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/输入盖板拆卸.jpg}" style="height:100%;width:100%;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/输入盖板拆卸.jpg}" style="height:200px;width:100%;">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C输入盖板拆卸方法</p>
                     <div class="form-group row">
@@ -384,7 +384,7 @@
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
 
                     <div style="padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/顶盖板拆卸.jpg}" style="height:100%;width:100%;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/顶盖板拆卸.jpg}" style="height:200px;width:100%;">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C顶盖板拆卸方法</p>
                     <div class="form-group row">
