--- a/src/main/resources/templates/task/calendar_manage.html
+++ b/src/main/resources/templates/task/calendar_manage.html
@@ -108,9 +108,9 @@
                 <div class="btn-group" style="width: 100%; margin-bottom: 10px;">
                   <!--<button type="button" id="color-chooser-btn" class="btn btn-info btn-block dropdown-toggle" data-toggle="dropdown">Color <span class="caret"></span></button>-->
                   <ul class="fc-color-picker" id="color-chooser">
-                    <li><a class="text-warning" href="#"><i class="fa fa-square"></i>维护</a></li>
-                    <li><a class="text-danger" href="#"><i class="fa fa-square"></i>维修</a></li>
-                    <li><a class="text-info" href="#"><i class="fa fa-square"></i>日常</a></li>
+                    <li><a class="text-warning" ><i class="fa fa-square"></i>维护</a></li>
+                    <li><a class="text-danger"><i class="fa fa-square"></i>维修</a></li>
+                    <li><a class="text-info" ><i class="fa fa-square"></i>日常</a></li>
                   </ul>
                 </div>
                 <!-- /btn-group -->
